add translation, code refactoring

--- a/ordering_process/lib/l10n/intl_de.arb
+++ b/ordering_process/lib/l10n/intl_de.arb
@@ -55,5 +55,11 @@
     "weightValueOverviewTitle": " kg",
     "priceOverviewTitle": "Preis: ",
     "priceValueOverviewTitle": " €",
-    "createLabelButtonTitle": "Paketschein erstellen"
+    "createLabelButtonTitle": "Paketschein erstellen",
+    "createdLabelTitle": "Paketschein erstellt",
+
+    "@_Steps_title": {},
+    "stepLabel": "Paketschein",
+    "stepContact": "Kontakt",
+    "stepOverview": "Übersicht"
 }
