--- a/ordering_process/lib/l10n/intl_en.arb
+++ b/ordering_process/lib/l10n/intl_en.arb
@@ -57,6 +57,7 @@
     "priceValueOverviewTitle": " €",
     "createLabelButtonTitle": "Create label",
     "createdLabelTitle": "Label created",
+    "shipmentId": "Shipment-ID: ",
 
     "@_Steps_title": {},
     "stepLabel": "Label",
