--- a/ordering_process/lib/l10n/intl_de.arb
+++ b/ordering_process/lib/l10n/intl_de.arb
@@ -49,7 +49,7 @@
 
     "@_Overview_Screen": {},
     "overviewAppbarTitle": "Übersicht",
-    "labelOverviewTitle": "Label:",
+    "labelOverviewTitle": "Paketschein:",
     "sizeOverviewTitle": "Größe: ",
     "weightOverviewTitle": "Gewicht: ",
     "weightValueOverviewTitle": " kg",
@@ -57,6 +57,7 @@
     "priceValueOverviewTitle": " €",
     "createLabelButtonTitle": "Paketschein erstellen",
     "createdLabelTitle": "Paketschein erstellt",
+    "shipmentId": "Sendungs-ID: ",
 
     "@_Steps_title": {},
     "stepLabel": "Paketschein",
